@@ -1,2 +1,2 @@
-/*C25*/SET SCHEMA PUBLIC
+/*C3*/SET SCHEMA PUBLIC
 DISCONNECT
